posts-comments-microservices/infra/k8s/comments-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deployment
spec:
  replicas: 1
  selector: # deployment selects
    matchLabels:
      app: comments # which labels for pods to manage
  template:
    metadata:
      labels:
        app: comments # expose to deployment and service
    spec:
      containers:
        - name: comments
          image: obudumlu/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
  selector:
    app: comments
  type: ClusterIP # already by default
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
