posts-comments-microservices/infra/k8s/moderation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deployment
spec:
  replicas: 1
  selector: # deployment selects
    matchLabels:
      app: moderation # which labels for pods to manage
  template:
    metadata:
      labels:
        app: moderation # expose to deployment and service
    spec:
      containers:
        - name: moderation
          image: obudumlu/moderation
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
  selector:
    app: moderation
  type: ClusterIP # already by default
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
