posts-comments-microservices/infra/k8s/posts-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-deployment
spec:
  replicas: 2
  selector: # deployment selects
    matchLabels:
      app: posts # which labels for pods to manage
  template:
    metadata:
      labels:
        app: posts # expose to deployment and service
    spec:
      containers:
        - name: posts
          image: obudumlu/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-service
spec:
  selector:
    app: posts
  type: ClusterIP # already by default
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
