posts-comments-microservices/infra/k8s/posts-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-service
spec:
  type: NodePort
  selector:
    app: posts # service selects
  ports:
    - name: posts
      protocol: TCP
      port: 4000 # exposed by service itself
      targetPort: 4000 #  exposed by container (posts/index.js)
