posts-comments-microservices/infra/k8s/query-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deployment
spec:
  replicas: 1
  selector: # deployment selects
    matchLabels:
      app: query # which labels for pods to manage
  template:
    metadata:
      labels:
        app: query # expose to deployment and service
    spec:
      containers:
        - name: query
          image: obudumlu/query
---
apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
  selector:
    app: query
  type: ClusterIP # already by default
  ports:
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
